# sith_newborn

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  TODO.md  bower.json  conventionalities.md  docker-compose.yml  hstore.sql  latest.heroku.7z  manage.py  package.json  pyproject.toml  requirements.txt
inventory/: admin.py  apps.py  forms.py  get_cpu_data.py  models.py  signals.py  speccy.py  urls.py  utils.py  views.py  widgets.py
inventory/fixtures/: Container.yaml  SpareType.yaml  Store.yaml
inventory/migrations/: 0001_initial.py  0002_allcontainertree.py  0003_auto_20160516_1422.py  0004_auto_20160516_1431.py  0005_auto_20160516_1945.py  0006_auto_20160519_1536.py  0007_delete_allcontainertree.py  0008_auto_20160927_1705.py  0009_image.py  0010_auto_20161003_1449.py  0011_auto_20161004_2005.py  0012_auto_20161005_1711.py  0013_auto_20161103_1628.py  0014_auto_20161103_1711.py  0015_component_price_usd.py  0016_auto_20161105_1910.py  0017_auto_20161107_1621.py  0018_auto_20161115_1119.py  0019_auto_20161214_0009.py  0020_auto_20161223_0029.py  0021_history.py  0022_auto_20161224_2022.py  0023_auto_20161225_2056.py  0024_auto_20161228_1820.py  0025_auto_20170109_2307.py  0026_auto_20170111_2046.py  0027_auto_20230228_1236.py
inventory/static/: featherlight_loader.css  inline_images_upload.css  inventory.css  inventory.js  stacked.css
inventory/templates/: grid.html  photo.html  rename.html
inventory/templates/admin/inventory/component/: change_form.html
serializers/: yaml.py
sith/: settings.py  urls.py  wsgi.py
templates/: base.html
(+5 files in other folders)
